@@ -1,5 +1,6 @@
 libsoup2.4 (2.25.91-2) UNRELEASED; urgency=low
 
+  [ Gustavo Noronha Silva ]
   * debian/control.in:
   - new package libsoup-gnome2.4-1, for the GNOME support library to live
     in
@@ -19,6 +20,11 @@ libsoup2.4 (2.25.91-2) UNRELEASED; urgency=low
     by the GNOME support libraries
   * debian/libsoup2.4-dev.install:
   - adapted to only install non-GNOME files
+
+  [ Emilio Pozuelo Monfort ]
+  * debian/watch: Don't uupdate
+  * Add debug packages for libsoup and libsoup-gnome. Closes: #519052.
+  * debian/copyright: refer to LGPL-2 rather than LGPL'
 
  -- Gustavo Noronha Silva <kov@debian.org>  Thu, 05 Mar 2009 07:49:04 -0300
 
